{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 24,
  "lineage": "f49fb730-5a30-edbe-8ae7-cc884029b6c0",
  "resources": [
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "private-nic",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/networkInterfaces/private-nic",
            "internal_domain_name_suffix": "exz2zxzzsg3ublh3t5b4apmebf.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "private-sub-a",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/virtualNetworks/cna-prod/subnets/linkedin-private-a"
              }
            ],
            "location": "westus",
            "name": "private-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "CloudNativeAzure-group"
          },
          "dependencies": [
            "module.CloudNativeAzure-vnet.azurerm_subnet.private-subnet-a",
            "module.CloudNativeAzure-vnet.azurerm_virtual_network.generic-virtual-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "public-nic",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/networkInterfaces/public-nic",
            "internal_domain_name_suffix": "exz2zxzzsg3ublh3t5b4apmebf.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "public-sub-a",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/publicIPAddresses/public-ips-a",
                "subnet_id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/virtualNetworks/cna-prod/subnets/linkedin-public-a"
              }
            ],
            "location": "westus",
            "name": "public-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "CloudNativeAzure-group"
          },
          "dependencies": [
            "module.CloudNativeAzure-vnet.azurerm_public_ip.public-a-ips",
            "module.CloudNativeAzure-vnet.azurerm_subnet.public-subnet-a",
            "module.CloudNativeAzure-vnet.azurerm_virtual_network.generic-virtual-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "generic-public-sec-grp",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/networkSecurityGroups/cloudnative-public-firewall",
            "location": "westus",
            "name": "cloudnative-public-firewall",
            "resource_group_name": "CloudNativeAzure-group",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "generic-public-rules",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/networkSecurityGroups/cloudnative-public-firewall/securityRules/test123",
            "name": "test123",
            "network_security_group_name": "cloudnative-public-firewall",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "CloudNativeAzure-group",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "22",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.CloudNativeAzure-vnet.azurerm_network_security_group.generic-public-sec-grp"
          ]
        }
      ]
    },
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public-a-ips",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/publicIPAddresses/public-ips-a",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.237.198.109",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "public-ips-a",
            "resource_group_name": "CloudNativeAzure-group",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          }
        }
      ]
    },
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public-b-ips",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/publicIPAddresses/public-ips-b",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.122.149",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "public-ips-b",
            "resource_group_name": "CloudNativeAzure-group",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Production"
            }
          }
        }
      ]
    },
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-subnet-a",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/virtualNetworks/cna-prod/subnets/linkedin-private-a",
            "name": "linkedin-private-a",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "CloudNativeAzure-group",
            "virtual_network_name": "cna-prod"
          },
          "dependencies": [
            "module.CloudNativeAzure-vnet.azurerm_virtual_network.generic-virtual-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-subnet-b",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/virtualNetworks/cna-prod/subnets/linkedin-private-b",
            "name": "linkedin-private-b",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "CloudNativeAzure-group",
            "virtual_network_name": "cna-prod"
          },
          "dependencies": [
            "module.CloudNativeAzure-vnet.azurerm_virtual_network.generic-virtual-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public-subnet-a",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/virtualNetworks/cna-prod/subnets/linkedin-public-a",
            "name": "linkedin-public-a",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "CloudNativeAzure-group",
            "virtual_network_name": "cna-prod"
          },
          "dependencies": [
            "module.CloudNativeAzure-vnet.azurerm_virtual_network.generic-virtual-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public-subnet-b",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/virtualNetworks/cna-prod/subnets/linkedin-public-b",
            "name": "linkedin-public-b",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "CloudNativeAzure-group",
            "virtual_network_name": "cna-prod"
          },
          "dependencies": [
            "module.CloudNativeAzure-vnet.azurerm_virtual_network.generic-virtual-cloud"
          ]
        }
      ]
    },
    {
      "module": "module.CloudNativeAzure-vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "generic-virtual-cloud",
      "provider": "module.CloudNativeAzure-vnet.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "dfccf325-9139-40bb-acfd-9fc3e03d840d",
            "id": "/subscriptions/344806e5-5213-4cda-9b45-e7d9269d7e7e/resourceGroups/CloudNativeAzure-group/providers/Microsoft.Network/virtualNetworks/cna-prod",
            "location": "westus",
            "name": "cna-prod",
            "resource_group_name": "CloudNativeAzure-group",
            "tags": {
              "environment": "Production"
            }
          }
        }
      ]
    }
  ]
}